cluster/cliproxyapi/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: cliproxyapi
  annotations:
    tailscale.com/expose: "true"
    tailscale.com/hostname: cliproxyapi
spec:
  type: ClusterIP
  selector:
    app: cliproxyapi
  ports:
    - name: http
      port: 80
      targetPort: http
